--- a/.env.production
+++ b/.env.production
@@ -5,4 +5,7 @@ ENV = 'production'
 VUE_APP_BASE_API = '/prod-api'
 VUE_APP_QUANTIZATION_API_URL = 'http://106.55.241.49:8060/'
 VUE_APP_REPORT_API_URL = 'http://report.prod.com/'
+VUE_APP_MEIYA_TMCJURISDICTION_API_URL = 'http://tmcjurisdiction.test.com/tmcjurisdiction/'
+
+
 
