--- a/.env.development
+++ b/.env.development
@@ -4,5 +4,5 @@ ENV = 'development'
 # base api
 VUE_APP_BASE_API = '/dev-api-'
 VUE_APP_QUANTIZATION_API_URL = 'http://127.0.0.1:8060/'
-VUE_APP_REPORT_API_URL = 'http://report.dev.com/'
+VUE_APP_MEIYA_REPORT_API_URL = 'http://report.test.com/report/'
 VUE_APP_MEIYA_TMCJURISDICTION_API_URL = 'http://tmcjurisdiction.test.com/tmcjurisdiction/'
