--- a/.env.test
+++ b/.env.test
@@ -4,5 +4,5 @@ ENV = 'test'
 # base api
 VUE_APP_BASE_API = '/test-api'
 VUE_APP_QUANTIZATION_API_URL = 'http://106.55.241.49:8060/'
-VUE_APP_REPORT_API_URL = 'http://report.test.com/'
+VUE_APP_MEIYA_REPORT_API_URL = 'http://report.test.com/report/'
 VUE_APP_MEIYA_TMCJURISDICTION_API_URL = 'http://tmcjurisdiction.test.com/tmcjurisdiction/'
