--- a/.env.staging
+++ b/.env.staging
@@ -6,5 +6,6 @@ ENV = 'staging'
 # base api
 VUE_APP_BASE_API = '/stage-api'
 VUE_APP_QUANTIZATION_API_URL = 'http://quantization.staging.com/'
-VUE_APP_REPORT_API_URL = 'http://report.staging.com/'
+VUE_APP_MEIYA_REPORT_API_URL = 'http://report.staging.com/'
+VUE_APP_MEIYA_TMCJURISDICTION_API_URL = 'http://tmcjurisdiction.test.com/tmcjurisdiction/'
 
