动态权限过滤菜单

--- a/.env.test
+++ b/.env.test
@@ -1,6 +1,6 @@
 # just a flag
 ENV = 'test'
-
+NODE_ENV = 'test'
 # base api
 VUE_APP_BASE_API = '/test-api'
 VUE_APP_QUANTIZATION_API_URL = 'http://106.55.241.49:8060/'
