权限过滤匹配 动态网站标题

--- a/.env.staging
+++ b/.env.staging
@@ -5,6 +5,7 @@ ENV = 'staging'
 
 # base api
 VUE_APP_BASE_API = '/stage-api'
+VUE_APP_TITLE = 'staging_KK_QUANTIZATION'
 VUE_APP_QUANTIZATION_API_URL = 'http://quantization.staging.com/'
 VUE_APP_MEIYA_REPORT_API_URL = 'http://report.staging.com/'
 VUE_APP_MEIYA_TMCJURISDICTION_API_URL = 'http://tmcjurisdiction.test.com/tmcjurisdiction/'
