--- a/.env.hg
+++ b/.env.hg
@@ -3,6 +3,7 @@ ENV = 'hg'
 NODE_ENV = 'hg'
 # base api
 VUE_APP_BASE_API = '/test-api'
+VUE_APP_TITLE = 'hg_KK_QUANTIZATION'
 VUE_APP_QUANTIZATION_API_URL = 'http://106.55.241.49:8060/'
 VUE_APP_MEIYA_REPORT_API_URL = 'https://testtmcsz.shinetour.com/report/'
 VUE_APP_MEIYA_TMCJURISDICTION_API_URL = 'http://testtmcsz.shinetour.com/tmcjurisdiction/'
