--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
   "dependencies": {
     "axios": "0.18.1",
     "core-js": "3.6.5",
+    "dayjs": "^1.11.5",
     "element-ui": "2.13.2",
+    "gantt-elastic": "^1.0.12",
+    "gantt-elastic-header": "^0.1.11",
+    "gantt-schedule-timeline-calendar": "^3.33.13",
     "js-cookie": "2.2.0",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
