--- a/.env.hg
+++ b/.env.hg
@@ -2,7 +2,7 @@
 ENV = 'hg'
 NODE_ENV = 'hg'
 # base api
-VUE_APP_BASE_API = '/test-api'
+VUE_APP_BASE_API = '/hg-api'
 VUE_APP_TITLE = 'hg_KK_QUANTIZATION'
 VUE_APP_QUANTIZATION_API_URL = 'http://127.0.0.1:8011/'
 VUE_APP_MEIYA_REPORT_API_URL = 'https://testtmcsz.shinetour.com/report/'
