--- a/.env.production
+++ b/.env.production
@@ -7,6 +7,7 @@ VUE_APP_TITLE = 'prod_KK_QUANTIZATION'
 VUE_APP_QUANTIZATION_API_URL = 'http://106.55.241.49:8011/'
 VUE_APP_MEIYA_REPORT_API_URL = 'http://tmc.shinetour.com/report/'
 VUE_APP_MEIYA_TMCJURISDICTION_API_URL = 'http://tmc.shinetour.com/tmcjurisdiction/'
+VUE_APP_MEIYA_MAINTENANCEPLATFORM_API_URL = 'https://mis.shinetour.com/'
 
 
 
