--- a/.env.test
+++ b/.env.test
@@ -7,3 +7,4 @@ VUE_APP_TITLE = 'test_KK_QUANTIZATION'
 VUE_APP_QUANTIZATION_API_URL = 'http://127.0.0.1:8011/'
 VUE_APP_MEIYA_REPORT_API_URL = 'http://report.test.com/report/'
 VUE_APP_MEIYA_TMCJURISDICTION_API_URL = 'http://tmcjurisdiction.test.com/tmcjurisdiction/'
+VUE_APP_MEIYA_MAINTENANCEPLATFORM_API_URL = 'https://mis.shinetour.com/'
