--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "description": "A vue admin template with Element UI & axios & iconfont & permission control & lint",
   "author": "Pan <panfree23@gmail.com>",
   "scripts": {
-    "dev": "vue-cli-service serve",
-    "test": "vue-cli-service serve --mode test",
-    "hg": "vue-cli-service serve --mode hg",
-    "prod": "vue-cli-service serve --mode prod",
-    "build:prod": "vue-cli-service build",
-    "build:test": "vue-cli-service build --mode test",
-    "build:hg": "vue-cli-service build --mode hg",
-    "build:stage": "vue-cli-service build --mode staging",
+    "dev": "SET NODE_OPTIONS=--openssl-legacy-provider && vue-cli-service serve",
+    "test": "SET NODE_OPTIONS=--openssl-legacy-provider && vue-cli-service serve --mode test",
+    "hg": "SET NODE_OPTIONS=--openssl-legacy-provider && vue-cli-service serve --mode hg",
+    "prod": "SET NODE_OPTIONS=--openssl-legacy-provider && vue-cli-service serve --mode prod",
+    "build:prod": "SET NODE_OPTIONS=--openssl-legacy-provider && vue-cli-service build",
+    "build:test": "SET NODE_OPTIONS=--openssl-legacy-provider && vue-cli-service build --mode test",
+    "build:hg": "SET NODE_OPTIONS=--openssl-legacy-provider && vue-cli-service build --mode hg",
+    "build:stage": "SET NODE_OPTIONS=--openssl-legacy-provider && vue-cli-service build --mode staging",
     "preview": "node build/index.js --preview",
     "svgo": "svgo -f src/icons/svg --config=src/icons/svgo.yml",
     "lint": "eslint --ext .js,.vue src",
