--- a/.env.test
+++ b/.env.test
@@ -4,7 +4,7 @@ NODE_ENV = 'test'
 # base api
 VUE_APP_BASE_API = '/test-api'
 VUE_APP_TITLE = 'test_KK_QUANTIZATION'
-VUE_APP_QUANTIZATION_API_URL = 'http://127.0.0.1:8011/'
-VUE_APP_MEIYA_REPORT_API_URL = 'http://report.test.com/report/'
-VUE_APP_MEIYA_TMCJURISDICTION_API_URL = 'http://tmcjurisdiction.test.com/tmcjurisdiction/'
+VUE_APP_QUANTIZATION_API_URL = 'http://192.168.2.235:8001/'
+VUE_APP_MEIYA_REPORT_API_URL = 'https://testtmcsz.shinetour.com/report/'
+VUE_APP_MEIYA_TMCJURISDICTION_API_URL = 'http://testtmcsz.shinetour.com/tmcjurisdiction/'
 VUE_APP_MEIYA_MAINTENANCEPLATFORM_API_URL = 'https://mis.shinetour.com/'
